[Server] きょうの一曲を iTunes の trackId で登録し楽曲情報を Apple から取得する.
